--- a/project 1/index.html
+++ b/project 1/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-
+<!-- this is form validation -->
 <body>
     <div class="container">
         <form action="" id="form">
